--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <a href="/">Home</a>
+    <a href="/run">Run</a>
+    <a href="/result-var">Result var</a>
 
     {% block body %}{% endblock %}
 </body>
