--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,7 @@
 <body>
     <a href="/">Home</a>
     <a href="/run">Run</a>
-    <a href="/result-var">Result var</a>
-
+    <center><h1>Please run the program by clicking on Run</h1></center>
     {% block body %}{% endblock %}
 </body>
 </html>
