--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
     <title>Dubizzle scraper by 2rbo</title>
 </head>
 <body>
-    <a href="/">Home</a>
+    {{message|safe}}
+    <a href="/home">Home</a>
     <a href="/run">Run</a>
     <center><h1>Please run the program by clicking on Run</h1></center>
     {% block body %}{% endblock %}
